--- a/my-app/src/component/Importexcel.css
+++ b/my-app/src/component/Importexcel.css
@@ -73,8 +73,9 @@
 .excel-modal-view-btn,
 .excel-modal-send-btn {
     margin-top: 20px;
+    margin-right: 10px;
     padding: 10px;
-    background-color: #007c89;
+    background-color: #2f327d;
     color: white;
     border: none;
     border-radius: 4px;
@@ -83,7 +84,7 @@
 
 .excel-modal-view-btn:hover,
 .excel-modal-send-btn:hover {
-    background-color: #007c89;
+    background-color: #2a2c75;
 }
 
 .excel-modal-content input {
@@ -96,7 +97,7 @@
 }
 .btn-download-sample {
     padding: 10px 15px;
-    background-color: #007c89;
+    background-color: #2f327d;
     color: white;
     border: none;
     border-radius: 4px;
@@ -105,7 +106,7 @@
 }
 
 .btn-download-sample:hover {
-    background-color: #025a64;
+    background-color: #272a70;
 }
 
 .excel-modal-content label {
