--- a/my-app/src/component/AdminDashboard.css
+++ b/my-app/src/component/AdminDashboard.css
@@ -1,6 +1,5 @@
 /* General Styles */
 .admin-dashboard-page {
-    font-family: 'arial', sans-serif;
     /* Light background color */
     color: #343a40;
     /* Darker text for contrast */
@@ -10,13 +9,13 @@
 
 .admin-dashboard-header {
     padding-top: 10px;
-    color: #007c89;
+    color: #2f327d;
     font-size: 25px;
 
 }
 .admin-dashboard-heading {
     padding-top: 20px;
-    color: #007c89;
+    color: #2f327d;
     font-size: 30px;
     text-align: center;
 
@@ -31,7 +30,7 @@
 }
 
 .admin-nav-button {
-    background-color: #007c89;
+    background-color:#2f327d;
     color: white;
     border: none !important;
     outline: none !important;
@@ -71,7 +70,7 @@
 .admin-dashboard-table th {
     color: #fff;
     font-weight: 600;
-    background: #007c89;
+    background: #2f327d;
     /* text-transform: uppercase; */
 }
 
@@ -157,7 +156,7 @@
 }
 
 input:checked+.slider {
-    background: #007c89;
+    background: #2f327d;
 }
 
 input:checked+.slider:before {
@@ -166,7 +165,7 @@ input:checked+.slider:before {
 
 .loader {
     border: 4px solid #f3f3f3;
-    border-top: 4px solid #3498db;
+    border-top: 4px solid #2f327d;
     border-radius: 50%;
     width: 20px;
     height: 20px;
