--- a/my-app/src/component/CampaignTable.css
+++ b/my-app/src/component/CampaignTable.css
@@ -1,6 +1,5 @@
 /* General Styles */
 .admin-dashboard-page {
-    font-family: 'arial', sans-serif;
     /* Light background color */
     color: #343a40;
     /* Darker text for contrast */
@@ -10,7 +9,7 @@
 
 .admin-dashboard-header {
     padding-top: 10px;
-    color: #007c89;
+    color: #2f327d;
     font-size: 25px;
 
 }
@@ -27,7 +26,7 @@
 }
 
 .admin-nav-button {
-    background-color: #007c89;
+    background-color: #2f327d;
     color: white;
     border: none !important;
     outline: none !important;
@@ -49,7 +48,7 @@
     border-radius: 8px;
     overflow: auto;
     overflow-y: scroll;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); */
 }
 
 .admin-dashboard-table th {
@@ -67,7 +66,7 @@
 .admin-dashboard-table th {
     color: #fff;
     font-weight: 600;
-    background: #007c89;
+    background: #2f327d;
     /* text-transform: uppercase; */
 }
 
@@ -85,7 +84,8 @@
 }
 .view-btn,
 .resend-btn {
-    background-color: #007bff;
+    background-color: #2f327d;
+    ;
     color: white;
     border: none;
     padding: 5px 10px;
@@ -96,7 +96,8 @@
 
 .view-btn:hover,
 .resend-btn:hover {
-    background-color: #0056b3;
+    background-color:#232669;
+    ;
 }
 
 .modal-overlay-fail {
