--- a/my-app/src/component/GroupModal.css
+++ b/my-app/src/component/GroupModal.css
@@ -158,7 +158,7 @@
 
 .modal-btn {
     padding: 10px 15px;
-    background-color: #007c89;
+    background-color: #2f327d;
     color: white;
     border: none;
     border-radius: 4px;
@@ -168,7 +168,7 @@
 }
 
 .modal-btn:hover {
-    background-color: #025a64;
+    background-color: #2f327d;
 }
 
 .modal-btn:disabled {
