--- a/my-app/src/component/Login.css
+++ b/my-app/src/component/Login.css
@@ -1,53 +1,53 @@
-/* General Styles */
+
 .login-page {
-    font-family: 'Roboto', sans-serif;
-    min-height: 100vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
+      justify-content: center;
+      align-items: center;
     margin: 0;
     padding: 0;
     background-color: #f2fbfc;
+     height: 100vh;
 
 }
 
 .login-cover {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: flex;  
     background: #fff;
-    width: 70%;
-    border-radius: 15px;
-    height: 510px;
-    animation: FadeIn 0.6s ease-in-out;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    width: 100%;
+    height: 100vh !important;
+
+    /* animation: FadeIn 0.6s ease-in-out; */
+    /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px; */
 }
 
 .login-aside {
     /* background: linear-gradient(135deg, #6a11cb, #2575fc); */
-    background-color: #007c89;
+    background-color: #faeedf;
     display: block;
-    color: white;
     width: 55%;
-    height: 100%;
     /* padding: 50px 0px; */
     align-content: center;
     text-align: center;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-    border-top-left-radius: 100px;
-    border-bottom-left-radius: 100px;
+
 }
-.login-aside h2{
+
+.login-aside h2 {
     color: white;
 }
 
+.labels {
+    font-size: 15px;
+    margin-bottom: 10px;
+    font-weight: 300;
+    color: #616161 !important;
+}
+
 .login-container {
+    padding-top:100px !important;
     background: #fff;
     width: 45%;
     padding: 2rem;
-    border-top-right-radius: 8px;
-    border-bottom-right-radius: 8px;
+
 }
 
 .login-header {
@@ -57,27 +57,31 @@
     color: #007c89;
 }
 
+.login-image {
+    width: 450px;
+}
+
 /* Button Styles */
 .login-button {
-    width: 80%;
-    padding: 0.8rem;
-    border: none;
-    border-radius: 20px;
-    font-size: 1rem;
-    cursor: pointer;
-    margin: 1rem 0px;
-    transition: background 0.3s ease;
+     padding:8px 30px;
+     border: none;
+     border-radius: 20px;
+     font-size: 16px;
+     font-weight: 500;
+     cursor: pointer;
+     margin: 10px 0px;
+     transition: background 0.3s ease;
 }
 
 .logins-button {
-    font-size: 13px;
-    border: none;
-    /* border-radius: 20px; */
-    cursor: pointer;
-    margin-bottom: 1rem;
-    color: gray;
-    font-weight: 550;
-    background-color: #fff;
+  font-size: 14px;
+  border: none;
+  cursor: pointer;
+  margin: 10px 0px;
+  color: gray;
+  font-weight: 550;
+  background-color: #fff;
+  text-align: center;
 }
 
 .logins-button:hover {
@@ -91,12 +95,13 @@
 }
 
 .login-submit {
-    background: #007c89;
+    background: #ffa734;
     color: #fff;
 }
 
 .login-submit:hover {
-    background: #007c89;
+    background: #f48c06;
+
 }
 
 .login-alt-button {
@@ -150,24 +155,19 @@
     }
 }
 
-.input-container {
-    position: relative;
+.input-container-login {
     /* margin-bottom: 20px; */
     width: 100%;
-    padding: 0.8rem;
-    margin-bottom: 1rem;
-    border: 1px solid #ddd;
+    padding: 0.6rem;
+    margin-bottom: 1.5rem;
+    border: 1px solid #c2c1c1 !important;
     border-radius: 4px;
     font-size: 1rem;
     box-sizing: border-box;
     outline: none;
-    transition: border-color 0.3s;
 }
 
-.input-container:focus {
-    border-color: #007c89;
-    box-shadow: 0 0 5px rgba(37, 117, 252, 0.3);
-}
+
 
 .input-icon {
     position: absolute;
@@ -181,11 +181,12 @@
 /* Input Styles */
 .login-input {
     width: 80% !important;
-    padding: 5px 20px !important;
+    padding: 0px 5px !important;
     border-radius: 5px !important;
     border: none !important;
     outline: none !important;
     margin: 0 !important;
+    /* font-size: larger; */
 }
 
 .log-btn {
