--- a/my-app/src/component/ParaEditor.css
+++ b/my-app/src/component/ParaEditor.css
@@ -30,7 +30,7 @@
     margin-top: 10px;
 }
 .para-btn {
-    background-color:#007c89;
+    background-color: #2f327d;
     color: white;
     border: none;
     padding: 10px;
@@ -43,7 +43,7 @@
 .select-variable-para{
     width:180px;
     height:40px;
-    background-color: #007c89;
+    background-color: #2f327d;
     color:white;
     outline: none;
 }
