--- a/my-app/src/component/Signup.css
+++ b/my-app/src/component/Signup.css
@@ -1,60 +1,63 @@
 .signup-page {
-    font-family: "Arial", sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
     color: #333;
-    background-color: #f2fbfc;
+    /* background-color: ; */
     /* background-color: #f0feff; */
 }
 
 .signup-cover {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center;
+    align-items: center; */
     background: #fff;
-    width: 70%;
-    border-radius: 15px;
-    height: 512px;
-    animation: signupFadeIn 0.8s ease-in-out;
+    width: 100%;
+    height: 100vh !important;
+    /* border-radius: 15px; */
+    /* animation: signupFadeIn 0.8s ease-in-out; */
     /* box-shadow:0 0 5px rgb(62, 61, 61) */
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px; */
+}
+
+.signup-image {
+    width: 450px;
+}
+
+.signup-aside h2 {
+    color: #2f327D;
 }
 
 .signup-aside {
     /* background: linear-gradient(135deg, #6a11cb, #2575fc); */
-    background-color: #007c89;
+    background-color: #faeedf;
     display: block;
-    color: white;
     width: 55%;
-    height: 100%;
     /* padding: 50px 0px; */
     align-content: center;
     text-align: center;
-    border-top-right-radius: 100px;
+    /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px; */
+    /* border-top-right-radius: 100px;
     border-bottom-right-radius: 100px;
     border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
+    border-bottom-left-radius: 15px; */
 }
-.signup-aside h2{
-    color: white !important;
-}
+
 
 .signup-container {
     background: #fff;
     width: 45%;
-    height: 445px;
     padding: 2rem;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
+    /* border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px; */
 }
 
 .signup-header {
     text-align: center;
     margin-bottom: 1rem;
+    margin-top: 5px;
     font-size: 2rem;
-    color: #007c89;
+    color: #2f327D;
 }
 
 /* Input Fields */
@@ -73,15 +76,26 @@
     justify-content: center;
 }
 
+.form-content {
+    margin-top: 20px;
+}
+
+.label {
+    font-size: 15px;
+    margin-bottom: 10px;
+    font-weight: 300;
+    color: #616161 !important;
+}
+
 .signup-button {
-    width: 80%;
-    padding: 0.8rem;
-    font-size: 1rem;
+    padding:8px 30px;
     border: none;
     border-radius: 20px;
+    font-size: 16px;
+    font-weight: 500;
     cursor: pointer;
-    margin: 1rem 0px;
-    transition: background 0.3s;
+    margin: 10px 0px;
+    transition: background 0.3s ease;
 }
 
 .signups-button:hover {
@@ -90,11 +104,10 @@
 }
 
 .signups-button {
-    font-size: 13px;
+    font-size: 14px;
     border: none;
-    border-radius: 20px;
     cursor: pointer;
-    margin-bottom: 1rem;
+    margin: 10px 0px;
     color: gray;
     font-weight: 550;
     background-color: #fff;
@@ -107,12 +120,13 @@
 }
 
 .signup-submit {
-    background: #007c89;
+    background: #ffa734;
     color: #fff;
 }
 
 .signup-submit:hover {
-    background: #007c89;
+    background: #f48c06;
+
 }
 
 /* .signup-alt-button {
@@ -166,24 +180,19 @@
     }
 }
 
-.input-container {
+.input-container-sign {
     position: relative;
     /* margin-bottom: 20px; */
     width: 100%;
-    padding: 0.8rem;
+    padding: 0.6rem;
     margin-bottom: 1rem;
-    border: 1px solid #ddd;
+    border: 1px solid #c2c1c1 !important;
     border-radius: 4px;
     font-size: 1rem;
     box-sizing: border-box;
     outline: none;
-    transition: border-color 0.3s;
 }
 
-.input-container:focus {
-    border-color: #007c89;
-    box-shadow: 0 0 5px rgba(37, 117, 252, 0.3);
-}
 
 .input-icon {
     position: absolute;
@@ -197,10 +206,11 @@
 .signup-input {
     /* padding-left: 30px; To make room for the icon inside */
     width: 80% !important;
-    padding: 5px 20px !important;
+    padding: 0px 5px !important;
     border-radius: 5px !important;
     border: none !important;
     outline: none !important;
     margin: 0 !important;
+    /* font-size: larger; */
     /* border: 1px solid #ccc; */
 }
