--- a/my-app/src/pages/Mainpage.css
+++ b/my-app/src/pages/Mainpage.css
@@ -330,13 +330,13 @@ button[data-tooltip]:hover::after {
     padding: 30px 20px 20px 20px !important;
     border-radius: 5px;
     width: 500px !important;
-    height: 330px !important;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     z-index: 100;
     overflow: hidden !important;
 }
 .testmail-content input{
     width: 96% !important;
+    margin-bottom: 10px !important;
 }
 .modal input,
 .modal textarea {
@@ -699,4 +699,12 @@ button[data-tooltip]:hover::after {
 
 .close-btn-send:hover {
     background-color:#016a75;
+}
+
+
+@media (max-width: 700px) {
+    .testmail-content{
+        width: 330px !important;
+    }
+
 }
