--- a/my-app/src/component/Login.css
+++ b/my-app/src/component/Login.css
@@ -167,8 +167,6 @@
     outline: none;
 }
 
-
-
 .input-icon {
     position: absolute;
     top: 48%;
@@ -192,4 +190,33 @@
 .log-btn {
     display: flex;
     justify-content: center;
+}
+
+
+.login-button:disabled {
+    background: none;
+    color: transparent;
+    border: none;
+    /* cursor: not-allowed; */
+}
+
+.loader-login {
+    border: 3px solid transparent;
+    border-top: 3px solid #f48c06 !important;
+    border-radius: 50%;
+    width: 18px;
+    height: 18px;
+    animation: spin 0.8s linear infinite;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
