--- a/my-app/src/component/Signup.css
+++ b/my-app/src/component/Signup.css
@@ -214,3 +214,40 @@
     /* font-size: larger; */
     /* border: 1px solid #ccc; */
 }
+
+.signup-button {
+    background-color: #f48c06;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.signup-button:disabled {
+    background: none;
+    color: transparent;
+    border: none;
+    /* cursor: not-allowed; */
+}
+
+.loader-signup {
+    border: 3px solid transparent;
+    border-top: 3px solid #f48c06 !important;
+    border-radius: 50%;
+    width: 18px;
+    height: 18px;
+    animation: spin 0.8s linear infinite;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
