--- a/my-app/src/pages/Mainpage.css
+++ b/my-app/src/pages/Mainpage.css
@@ -1,7 +1,3 @@
-/* * {
-  font-family: serif;
-} */
-
 .app-container {
     display: flex;
 }
@@ -80,7 +76,8 @@ input[type="color"] {
     cursor: pointer;
     overflow: hidden;
 }
-.bg-color-pic{
+
+.bg-color-pic {
     width: 15px !important;
     height: 15px !important;
 
@@ -119,8 +116,9 @@ input[type="color"]::-webkit-color-swatch {
     justify-content: space-between;
     box-shadow: 0 0 5px #9d9696;
 }
-.company-name{
-    color: #007c89;
+
+.company-name {
+    color: #2f327D;
 }
 
 button {
@@ -157,7 +155,7 @@ button[data-tooltip]:hover::after {
 }
 
 .navbar-button {
-    background-color: #007c89;
+    background-color: #2f327D;
     color: white;
     border: none;
     padding: 12px 20px;
@@ -171,9 +169,9 @@ button[data-tooltip]:hover::after {
 
 .navbar-button-excel {
     background-color: #f3f5f6;
-    color: #007c89;
+    color: #2f327D;
     text-align: center;
-    border:none;
+    border: none;
     padding: 12px 20px;
     cursor: pointer;
     font-size: 15px;
@@ -182,9 +180,10 @@ button[data-tooltip]:hover::after {
     margin-left: 10px;
     margin-top: 15px;
 }
-.navbar-button-send{
+
+.navbar-button-send {
     background-color: #f3f5f6;
-    color: #007c89;
+    color: #2f327D;
     text-align: center;
     border: none;
     padding: 12px 20px;
@@ -200,9 +199,9 @@ button[data-tooltip]:hover::after {
 
 .navbar-button-Desktop {
     background-color: #ebeced;
-    color: #007c89;
+    color: #2f327D;
     border: none;
-    padding:12px 8px;
+    padding: 12px 8px;
     cursor: pointer;
     font-size: 15px;
     border-radius: 5px;
@@ -212,12 +211,12 @@ button[data-tooltip]:hover::after {
 }
 
 .navbar-button-Desktop:hover {
-    background-color: #99c3c7;
+    background-color: #bec7d8;
     /* border: 2px solid #007c89; */
 }
 
 .navbar-button-excel:hover {
-        background-color: #99c3c7;
+    background-color: #bec7d8;
 }
 
 .tabs {
@@ -235,8 +234,8 @@ button[data-tooltip]:hover::after {
     /* border-radius: 4px; */
     /* margin-right: 8px; */
     font-size: 18px;
-    border-bottom: 3px solid #007c89;
-    color: #007c89;
+    border-bottom: 3px solid #2f327D;
+    color: #2f327D;
 }
 
 
@@ -244,13 +243,13 @@ button[data-tooltip]:hover::after {
 
 .Nav-icons {
     font-size: 14px;
-    padding:0px 8px;
+    padding: 0px 8px;
 }
 
 .navbar h3 {
     font-size: 30px;
     align-items: center;
-    margin-top:15px;
+    margin-top: 15px;
 }
 
 /* .nav-names{
@@ -324,7 +323,6 @@ button[data-tooltip]:hover::after {
     justify-content: center;
     align-items: center;
 }
-
 .testmail-content {
     background-color: white;
     padding: 30px 20px 20px 20px !important;
@@ -334,10 +332,12 @@ button[data-tooltip]:hover::after {
     z-index: 100;
     overflow: hidden !important;
 }
-.testmail-content input{
+
+.testmail-content input {
     width: 96% !important;
     margin-bottom: 10px !important;
 }
+
 .modal input,
 .modal textarea {
     width: 95%;
@@ -347,7 +347,7 @@ button[data-tooltip]:hover::after {
     border-radius: 5px;
 }
 
-.content-tab{
+.content-tab {
     display: grid;
     grid-template-columns: auto auto;
     gap: 10px;
@@ -355,7 +355,7 @@ button[data-tooltip]:hover::after {
 }
 
 .modal-button {
-    background-color: #007c89;
+    background-color: #2f327D;
     color: white;
     border: none;
     padding: 10px;
@@ -368,7 +368,7 @@ button[data-tooltip]:hover::after {
 
 .modal-btn-size {
     background-color: #dee0e0;
-    color: #007c89;
+    color: #2f327D;
     border: none;
     padding: 5px;
     cursor: pointer;
@@ -524,9 +524,10 @@ button[data-tooltip]:hover::after {
 }
 
 .nested-layout-box:hover {
-    border-color: #007bff;
+    border-color: #2f327D;
     background-color: #f8f9fa;
 }
+
 /* Modal Overlay */
 .home-overlay {
     position: fixed;
@@ -567,8 +568,8 @@ button[data-tooltip]:hover::after {
 
 .Layout-img {
     display: flex;
-    gap:20px;
-    padding:5px;
+    gap: 20px;
+    padding: 5px;
 }
 
 .select-variable {
@@ -591,7 +592,8 @@ button[data-tooltip]:hover::after {
     position: absolute;
     right: 16%;
 }
-.select-variable option{
+
+.select-variable option {
     background-color: #fdffff;
     color: black;
     padding: 10px 0px;
@@ -610,7 +612,7 @@ button[data-tooltip]:hover::after {
 
 /* Open Modal Button */
 .open-modal-btn {
-    background-color: #007bff;
+    background-color:#3f4192;
     color: white;
     padding: 12px 18px;
     border: none;
@@ -621,7 +623,7 @@ button[data-tooltip]:hover::after {
 }
 
 .open-modal-btn:hover {
-    background-color: #0056b3;
+    background-color:#212366;
 }
 
 /* Modal Overlay */
@@ -687,7 +689,7 @@ button[data-tooltip]:hover::after {
 /* Close Button */
 .close-btn-send {
     margin-top: 15px;
-    background-color:#007c89;
+    background-color: #434696;
     color: white;
     padding: 10px 15px;
     border: none;
@@ -698,13 +700,5 @@ button[data-tooltip]:hover::after {
 }
 
 .close-btn-send:hover {
-    background-color:#016a75;
-}
-
-
-@media (max-width: 700px) {
-    .testmail-content{
-        width: 330px !important;
-    }
-
+    background-color: #2f327D;
 }
