--- a/my-app/src/component/Importexcel.css
+++ b/my-app/src/component/Importexcel.css
@@ -113,6 +113,58 @@
     margin-bottom: 10px;
     font-weight: bold;
 }
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 20px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider-send {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: 0.4s;
+    border-radius: 20px;
+}
+
+.slider-send:before {
+    position: absolute;
+    content: "";
+    height: 15px;
+    width: 15px;
+    left: 3px;
+    bottom: 3px;
+    background-color: white;
+    transition: 0.4s;
+    border-radius: 50%;
+}
+
+input:checked+.slider-send {
+    background-color: #2f327d;
+}
+
+input:checked+.slider-send:before {
+    transform: translateX(20px);
+}
+
+.toggle-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 10px 0;
+}
+
 
 @media (max-width: 768px) {
     .excel-modal-content {
