--- a/my-app/src/component/Signup.css
+++ b/my-app/src/component/Signup.css
@@ -47,7 +47,7 @@
 .signup-container {
     background: #fff;
     width: 45%;
-    padding: 2rem;
+    padding: 0.5rem 2rem;
     /* border-top-right-radius: 15px;
     border-bottom-right-radius: 15px; */
 }
@@ -55,7 +55,6 @@
 .signup-header {
     text-align: center;
     margin-bottom: 1rem;
-    margin-top: 5px;
     font-size: 2rem;
     color: #2f327D;
 }
@@ -77,7 +76,7 @@
 }
 
 .form-content {
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .label {
@@ -88,7 +87,7 @@
 }
 
 .signup-button {
-    padding:8px 30px;
+    padding: 8px 30px;
     border: none;
     border-radius: 20px;
     font-size: 16px;
@@ -224,6 +223,7 @@
     cursor: pointer;
     transition: 0.3s;
 }
+
 .signup-button:disabled {
     background: none;
     color: transparent;
@@ -241,6 +241,79 @@
     display: inline-block;
     vertical-align: middle;
 }
+
+.signup-dropdown {
+    padding: 0.75rem !important;
+    border-radius: 5px !important;
+    border: 1px solid #c2c1c1 !important;
+    outline: none !important;
+    margin: 0 !important;
+
+}
+
+/* Modal Background */
+
+.custom-modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Modal Box */
+.custom-modal-container {
+    background: white;
+    width: 400px;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+
+}
+
+
+
+/* Close Button */
+.modal-close-button {
+    background: #f44336;
+    color: white;
+    padding: 8px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.modal-close-button:hover {
+    background: #d32f2f;
+}
+
+/* Steps List */
+.custom-modal-container ol {
+    text-align: left;
+    margin: 10px 0;
+    padding-left: 20px;
+}
+
+.custom-modal-container li {
+    margin: 5px 0;
+}
+
+/* Info Icon */
+.info-icon {
+    cursor: pointer;
+    margin-left: 5px;
+    color: #007bff;
+}
+
+.info-icon:hover {
+    color: #0056b3;
+}
+
 
 @keyframes spin {
     0% {
