--- a/my-app/src/component/CampaignTable.css
+++ b/my-app/src/component/CampaignTable.css
@@ -17,12 +17,13 @@
 .admin-nav {
     display: flex;
     justify-content: space-between;
-    background-color: #f8f9fa;
+    background-color: #e6ddfe;
     font-weight: bold;
     padding: 20px 10px;
     margin: 0px;
-     position: sticky;
-     top: 0;
+    position: sticky;
+    top: 0;
+    z-index: 999;
 }
 
 .admin-nav-button {
@@ -46,9 +47,10 @@
     margin: 15px auto;
     background: #ffffff;
     border-radius: 8px;
-  
+
     /* box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); */
 }
+
 /* .cam-scroll{
     height: 580px !important;
      overflow: auto;
@@ -83,6 +85,7 @@
     background: #f1f3f5;
     transition: background 0.3s ease;
 }
+
 .view-btn,
 .resend-btn {
     background-color: #2f327d;
@@ -97,7 +100,7 @@
 
 .view-btn:hover,
 .resend-btn:hover {
-    background-color:#232669;
+    background-color: #232669;
     ;
 }
 
@@ -133,15 +136,17 @@
 .close-btn-fail:hover {
     background-color: darkred;
 }
-.failedview{
+
+.failedview {
     max-height: 250px;
     overflow-x: auto;
 }
 
 /* Toggle switch */
-.toggle{
-    align-items: center;  
+.toggle {
+    align-items: center;
 }
+
 .toggle-switch {
     position: relative;
     display: inline-block;
@@ -154,6 +159,7 @@
     width: 0;
     height: 0;
 }
+
 .modal-schedule {
     position: fixed;
     top: 0;
@@ -188,7 +194,7 @@
 }
 
 .modal-actions-schedule button:first-child {
-    background:#2f327d;
+    background: #2f327d;
     color: white;
 }
 
@@ -201,7 +207,7 @@
     display: flex;
     align-items: center;
     border-radius: 25px;
-    width: 300px;  
+    width: 300px;
     position: relative;
 }
 
